# coperception

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  MANIFEST  README.md  environment.yml  mkdocs.yml  requirements.txt  setup.py
coperception/: README.md  README.txt  __init__.py
coperception/configs/: Config.py  ConfigGlobal.py  __init__.py
coperception/datasets/: NuscenesDataset.py  V2XSimDet.py  V2XSimSeg.py  __init__.py
coperception/utils/: AverageMeter.py  CoDetModule.py  SegMetrics.py  SegModule.py  __init__.py  data_util.py  detection_util.py  loss.py  mapping.py  mean_ap.py  min_norm_solvers.py  nuscenes_pc_util.py  obj_util.py  postprocess.py
coperception/utils/dynamic_library/: CMakeLists.txt  mapping.cpp
docs/: README.md  collaborative_models.md  index.md  individual_models.md  models.md  requirements.txt  versions.json  visualization.md
docs/datasets/: v2x_sim.md
docs/example_programs/: det.md  index.md  seg.md  track.md
docs/getting_started/: installation.md
docs/tools/: det.md  index.md  seg.md  track.md
docs/tutorials/: advanced_visualization.md  basic_visualization.md  collaborative_models.md  individual_models.md  visualization.md
docs/visualization/: basic_visualization.md
example/: .gitignore
example/det/: create_data_det.py  test_codet.py
example/seg/: create_data_seg.py
example/track/: Makefile
example/visualization/: voxel_seg.py  voxel_seg_gt.py
tools/: .gitignore  README.md
tools/det/: Makefile  README.md  count_scenes.py  create_data_det.py  test_codet.py  train_codet.py
(+122 files in other folders)
